changed the font for the title

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Reenie+Beanie&subset=latin' rel='stylesheet' type='text/css'>
+    
     <title>radpid</title>
     <meta name="robots" content="noindex,nofollow">
     <link href="/stylesheets/application.css" type="text/css" rel="stylesheet" />
